[project]
name = "major-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphifyy[openai]>=0.8.46",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "neurokit2>=0.2.13",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
